--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blastz/pkgx",
-  "version": "0.13.0",
+  "version": "0.14.0",
   "description": "The zero configuration tool for any repository",
   "type": "module",
   "homepage": "https://github.com/blastZ/pkgx",
@@ -18,19 +18,19 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/serve-handler": "^6.1.4",
-    "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
     "commander": "^11.1.0",
     "dayjs": "^1.11.10",
     "globby": "^14.0.0",
     "pretty-ms": "^8.0.0",
     "rollup": "^4.9.1",
-    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.1.0",
     "serve-handler": "^6.1.5",
     "zx": "^7.2.3"
   },
   "devDependencies": {
+    "@rollup/plugin-virtual": "^3.0.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -38,7 +38,9 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.0",
+    "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.1.3"
   }
