--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blastz/pkgx",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "The zero configuration tool for any repository",
   "type": "module",
   "homepage": "https://github.com/blastZ/pkgx",
@@ -41,6 +41,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.2",
+    "tsc-alias": "^1.8.8",
     "tslib": "^2.6.2",
     "typescript": "^5.1.3"
   }
