--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blastz/pkgx",
-  "version": "0.18.0",
+  "version": "0.19.0",
   "description": "The zero configuration tool for any repository",
   "type": "module",
   "homepage": "https://github.com/blastZ/pkgx",
@@ -22,6 +22,7 @@
     "chokidar": "^3.5.3",
     "commander": "^11.1.0",
     "dayjs": "^1.11.10",
+    "esbuild": "^0.20.1",
     "globby": "^14.0.0",
     "pretty-ms": "^8.0.0",
     "rollup": "^4.9.1",
