--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blastz/pkgx",
-  "version": "0.20.0",
+  "version": "0.21.0",
   "description": "The zero configuration tool for any repository",
   "type": "module",
   "homepage": "https://github.com/blastZ/pkgx",
@@ -19,6 +19,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-swc": "^0.3.0",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@swc/core": "^1.4.8",
     "@types/serve-handler": "^6.1.4",
     "chokidar": "^3.5.3",
     "commander": "^11.1.0",
@@ -36,6 +37,7 @@
     "@rollup/plugin-virtual": "^3.0.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
@@ -44,6 +46,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.0",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "tsc-alias": "^1.8.8",
     "tslib": "^2.6.2",
