--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blastz/pkgx",
-  "version": "0.23.0",
+  "version": "0.24.0",
   "description": "The zero configuration tool for any repository",
   "type": "module",
   "homepage": "https://github.com/blastZ/pkgx",
@@ -50,6 +50,7 @@
     "ts-jest": "^29.1.2",
     "tsc-alias": "^1.8.8",
     "tslib": "^2.6.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vitest": "^2.1.2"
   }
 }
