--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blastz/pkgx",
-  "version": "0.24.0",
+  "version": "0.25.0",
   "description": "The zero configuration tool for any repository",
   "type": "module",
   "homepage": "https://github.com/blastZ/pkgx",
@@ -30,7 +30,8 @@
     "rollup": "^4.9.1",
     "rollup-plugin-dts": "^6.1.0",
     "serve-handler": "^6.1.5",
-    "zx": "^7.2.3"
+    "zx": "^7.2.3",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@blastz/jest": "^0.2.0",
@@ -49,7 +50,6 @@
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "tsc-alias": "^1.8.8",
-    "tslib": "^2.6.2",
     "typescript": "^5.1.3",
     "vitest": "^2.1.2"
   }
