--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blastz/pkgx",
-  "version": "0.25.0",
+  "version": "1.0.0",
   "description": "The zero configuration tool for any repository",
   "type": "module",
   "homepage": "https://github.com/blastZ/pkgx",
@@ -27,16 +27,15 @@
     "esbuild": "^0.20.1",
     "globby": "^14.0.0",
     "pretty-ms": "^8.0.0",
+    "rolldown": "1.0.0-beta.10",
     "rollup": "^4.9.1",
     "rollup-plugin-dts": "^6.1.0",
     "serve-handler": "^6.1.5",
-    "zx": "^7.2.3",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "zx": "^7.2.3"
   },
   "devDependencies": {
-    "@blastz/jest": "^0.2.0",
     "@rollup/plugin-virtual": "^3.0.2",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -45,12 +44,10 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.7.0",
     "prettier": "^3.0.0",
     "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2",
     "tsc-alias": "^1.8.8",
     "typescript": "^5.1.3",
-    "vitest": "^2.1.2"
+    "vitest": "^3.1.4"
   }
 }
